--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +19,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
+    
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
